# 15721-s24-ee2

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: build.yml
data/: classes.csv  data.csv  data.parquet  data2.csv  more_classes.csv  products.csv  products.parquet  students.csv
data/tpch/queries/: tpch10.sql  tpch12.sql  tpch13.sql  tpch14.sql  tpch15.sql  tpch16.sql  tpch17.sql  tpch19.sql  tpch2.sql  tpch3.sql  tpch4.sql  tpch5.sql  tpch6.sql  tpch7.sql  tpch8.sql  tpch9.sql
datafusion-integration/: Cargo.toml
datafusion-integration/src/: cmu_execution.rs  main.rs  util.rs
datafusion-integration/src/execution/: mod.rs  operators.rs  operators_conversion.rs  pipeline.rs
datafusion-integration/testing/: README.md
datafusion-integration/testing/data/csv/: join_test_A.csv
docs/: 15721-project-ee2.json  DesignDocument.md
docs/proposal/: Proposal.md
lighting/: Cargo.toml
lighting/src/: main.rs
query_generation/: Makefile  README.md  compile_substrait.py  query_generation.py
query_generation/complex_graph/: 6joins.sql
query_generation/simple_tests/: aggregate.sql  cross.sql  filter.sql  join.sql  read.sql  read_filter.sql  read_project.sql  set.sql  sort.sql
scripts/: tpch.sql
src/: common.rs  df2pipeline.rs  execution_context.rs  expression_executor.rs  helper.rs  lib.rs  logical_to_physical.rs  main.rs  operator.rs  parallel.rs  physical_operator.rs  physical_operator_states.rs  pipeline_executor.rs
src/common/: constants.rs  enums.rs  row_hashmap.rs  types.rs
src/common/enums/: operator_result_type.rs  physical_operator_type.rs
src/common/types/: data_chunk.rs
src/operator/: dummy_sink.rs  filter.rs  hash_aggregate.rs  hash_join.rs  limit.rs  physical_batch_collector.rs  placeholder.rs  projection.rs  scan.rs  sort.rs
src/parallel/: executor.rs  executor_task.rs  pipeline.rs  pipeline_executor.rs  task.rs
tests/: count.rs  filter.rs  hash_aggregate.rs  projection.rs
vayu/: Cargo.toml  README.md  links.md
vayu-common/: Cargo.toml
vayu-common/src/: lib.rs  store.rs
vayu/src/: DummyExec.rs  df2vayu.rs  dummy.rs  lib.rs  operators.rs  pipeline.rs  pipeline_executor.rs  sinks.rs  store.rs
vayu/src/operators/: aggregate.rs  dummy_sink.rs  filter.rs  hash_build.rs  hash_join.rs  join.rs  mod.rs  projection.rs  scan.rs  store.rs
vayuDB/: Cargo.toml  README.md
vayuDB/src/: dummy_tasks.rs  io_service.rs  main.rs  scheduler.rs  tpch_tasks.rs
vayuDB/testing/data/csv/: join_test_B.csv
