[workspace] 
members = ["datafusion-integration", "vayu"] 
exclude = ["arrow-datafusion"]

[package]
name = "ee2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { version = "50.0.0"}
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"] }
