[package]
name = "ee2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12"
prost-types = "0.12"
protoc-rust = "2.28.0"
datafusion = "36.0.0"
csv = "1.3.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
ahash = "0.8.11"
