[package]
name = "vayu-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = { version = "36.0.0", path = "../arrow-datafusion/datafusion/core"}
arrow = {}
crossbeam-utils = "0.8.19"
crossbeam-skiplist = "0.1.3"
