[package]
name = "vayu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { version = "50.0.0"}
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = { version = "0.3.28" }
datafusion = { version = "36.0.0", path = "../arrow-datafusion/datafusion/core"}
datafusion-proto = { version = "36.0.0", path = "../arrow-datafusion/datafusion/proto"}
