[package]
name = "vayu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { version = "50.0.0"}
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = { version = "0.3.28" }
datafusion = { version = "36.0.0", path = "../arrow-datafusion/datafusion/core"}
vayu-common = { version = "0.1.0", path = "../vayu-common"}
ahash = "0.8.11"
crossbeam-skiplist = "0.1.3"
crossbeam-utils = "0.8.19"
leapfrog =  {version = "0.3.0", features = ["stable_alloc"]}

